# SummerCode

./: .gitignore  README.md  TEST_REPORT.md  pyproject.toml  test_tools.py
src/summercode/: __init__.py
src/summercode/agents/: coding_agent.py
src/summercode/models/: chat_model.py
src/summercode/tools/: __init__.py  bash_tool.py  create_file_tool.py  grep_tool.py  insert_content_tool.py  ls_tool.py  str_replace_tool.py  todo_write_tool.py  tree_tool.py  view_file_tool.py
src/summercode/ui/: app.py  callbacks.py
