[project]
name = "summercode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx[socks]>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-mcp-adapters>=0.1.13",
    "langchain[openai]>=1.0.8",
    "langgraph>=1.0.3",
    "pexpect>=4.9.0",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "textual>=6.6.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
